5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1826_1642.log
== TEST (2019-06-12 18:51:35) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in (vet):
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:36) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in (vet):
	if (vet[i] % 5) == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:30) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in (vet):
	b = vet[i] % 5
	if (b == 0) :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:47) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in (vet):
	b = vet[i] % 5
	if (b == 0) :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:18) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in size(vet):
	
	if vet[] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
File "XXXX", line 9
    if vet[] % 5 == 0 :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:24) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in size(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:44) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in size(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:00) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in arange(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:19) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in arange(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:31) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in range(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:47) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
for i in range(vet):
	
	if vet[i] % 5 == 0 :
		a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:04:57) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
if vet[] 
for i in (vet):
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
File "XXXX", line 7
    if vet[] 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:03) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0

for i in (vet):
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:24) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0

for i in vet:
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:44) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0

for i in size(vet):
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:00) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0

for i in size(vet):
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:38) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0

for i in size(vet):
	
	if vet[i] >= 5 :
		b = vet[i]/5
		print(b)
	a = a + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:34) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
z = zeros(4, dtapy = int)
var = z + 5
for i in size(vet):
	if (vet[i] % var[i]) == z[i]: 
	 	a = a + 1
		print (a)
for elemento in size(vet):
	if (vet % var) == z:
		b = (vet % var)
		print(b)
	
-- ERROR:
File "XXXX", line 12
    print (a)
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:03) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
z = zeros(4, dtapy = int)
var = z + 5
for i in size(vet):
	if (vet[i] % var[i]) == z[i]: 
	 	a = a + 1
	 	print (a)
for elemento in size(vet):
	if (vet % var) == z:
		b = (vet % var)
		print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:19) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
z = zeros(4, dtapy = int)
var = z + 5
for i in size(vet):
	if (vet[i] % var[i]) == z[i]: 
	 	a = a + 1
	 	print (a)
for elemento in size(vet):
	if (vet % var) == z:
		b = (vet % var)
		print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:44) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
z = zeros(4, dtapy = int)
var = z + 5
for i in size(vet):
	if (vet % var) == z: 
	 	a = a + 1
	 	print (a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:08) 
-- CODE:
from numpy import*

#quantidade de aluno matriculado por sala
vet = array(eval(input("quantidade de aluno:")))

a = 0
z = zeros(4, dtapy = int)
var = z + 5
for i in size(vet):
	if (vet % var) == z: 
	 	a = a + 1
	 	print (a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
